# FocalEngineEditor

./: .gitignore  .gitmodules  CMakeLists.txt  FEEditor.cpp  FEEditor.h  FEEditorContentBrowser.cpp  FEEditorDragAndDropManager.cpp  FEEditorDragAndDropManager.h  FEEditorGizmoManager.cpp  FEEditorGizmoManager.h  FEEditorHaloSelectionEffect.cpp  FEEditorHaloSelectionEffect.h  FEEditorPreviewManager.cpp  FEEditorPreviewManager.h  FEEditorScriptingSystem.cpp  FEEditorScriptingSystem.h  FEEditorSelectedObject.cpp  FEEditorSelectedObject.h  FEEditorVirtualFileSystem.cpp  FEEditorVirtualFileSystem.h  FEProject.cpp  FEProject.h  FEProjectBuildSystem.cpp  FEProjectBuildSystem.h  LICENSE.md  README.md  main.cpp
EditorWindows/: CombineChannelsToTexturePopUp.cpp  CombineChannelsToTexturePopUp.h  ContentBrowserWindow.cpp  ContentBrowserWindow.h  DebugTextureViewWindow.cpp  DebugTextureViewWindow.h  DeletePopups.cpp  DeletePopups.h  EditPopups.cpp  EditPopups.h  GyzmosSettingsWindow.cpp  GyzmosSettingsWindow.h  InspectorWindow.cpp  InspectorWindow.h  LogWindow.cpp  PrefabEditorManager.cpp  PrefabEditorManager.h  PrefabEditorWindow.cpp  PrefabEditorWindow.h  ProjectWasModifiedPopUp.cpp  ProjectWasModifiedPopUp.h  RenamePopups.cpp  RenamePopups.h  ResizeTexturePopup.cpp  ResizeTexturePopup.h  SceneGraphWindow.cpp  SceneGraphWindow.h  SelectPopups.cpp  SelectPopups.h  ShaderEditorWindow.cpp  ShaderEditorWindow.h
EditorWindows/EditorBaseWindowClasses/: FEEditorSceneWindow.cpp  FEEditorSceneWindow.h
FEDearImguiWrapper/: FEDearImguiWrapper.cpp  FEDearImguiWrapper.h
FEEditorSubWindows/: combineChannelsToTexturePopUp.cpp  combineChannelsToTexturePopUp.h  deletePopups.h  editPopups.cpp  editPopups.h  gyzmosSettingsWindow.h  prefabEditorWindow.cpp  projectWasModifiedPopUp.cpp  projectWasModifiedPopUp.h  shaderEditorWindow.cpp
Resources/: imgui.ini
Resources/BuildScripts/: CMakeLists_Template.txt  Main_Template.cpp  Main_Template.h
SubSystems/NodeSystem/CustomNodes/: FEEditorFloatSourceNode.cpp  FEEditorFloatSourceNode.h  FEEditorMaterialNode.cpp  FEEditorMaterialNode.h  FEEditorTextureCreatingNode.cpp  FEEditorTextureCreatingNode.h  FEEditorTextureSourceNode.cpp  FEEditorTextureSourceNode.h
SubSystems/ProjectManagment/: FENativeScriptProject.cpp  FENativeScriptProject.h  FEProject.cpp  FEProject.h  FEProjectManager.cpp  FEProjectManager.h
UserScripts/NativeScriptProjectData/: CMakeLists.txt
